feat: Switching to RSA-4096 key

--- a/etc/root-ca.conf
+++ b/etc/root-ca.conf
@@ -13,7 +13,7 @@ dir                     = .                     # Top dir
 # certificate.
 
 [ req ]
-default_bits            = 2048                  # RSA key size
+default_bits            = 4096                  # RSA key size
 encrypt_key             = yes                   # Protect private key
 default_md              = sha256                # MD to use
 utf8                    = yes                   # Input is UTF-8
@@ -26,8 +26,9 @@ req_extensions          = ca_reqext             # Desired extensions
 0.domainComponent       = "edu"
 1.domainComponent       = "ucsd"
 2.domainComponent       = "e4e"
-organizationName        = "UCSD Engineers for Exploration"
-commonName              = "Engineers for Exploration CA"
+organizationName        = "UC San Diego"
+organizationalUnitName  = "Engineers for Exploration"
+commonName              = "UCSD Engineers for Exploration"
 
 [ ca_reqext ]
 keyUsage                = critical,keyCertSign,cRLSign
