--- a/etc/tls-server.conf
+++ b/etc/tls-server.conf
@@ -9,19 +9,17 @@ encrypt_key             = no                    # Protect private key
 default_md              = sha256                # MD to use
 utf8                    = yes                   # Input is UTF-8
 string_mask             = utf8only              # Emit UTF-8 strings
-prompt                  = yes                   # Prompt for DN
+prompt                  = no                    # Prompt for DN
 distinguished_name      = server_dn             # DN template
 req_extensions          = server_reqext         # Desired extensions
 
 [ server_dn ]
-countryName             = "1. Country Name (2 letters) (eg, US)       "
-countryName_max         = 2
-stateOrProvinceName     = "2. State or Province Name   (eg, region)   "
-localityName            = "3. Locality Name            (eg, city)     "
-organizationName        = "4. Organization Name        (eg, company)  "
-organizationalUnitName  = "5. Organizational Unit Name (eg, section)  "
-commonName              = "6. Common Name              (eg, FQDN)     "
-commonName_max          = 64
+countryName             = "US"
+stateOrProvinceName     = "California"
+localityName            = "San Diego"
+organizationName        = "UC San Diego"
+organizationalUnitName  = "Engineers for Exploration"
+commonName              = "UCSD Engineers for Exploration"
 
 [ server_reqext ]
 keyUsage                = critical,digitalSignature,keyEncipherment
