--- a/etc/signing-ca.conf
+++ b/etc/signing-ca.conf
@@ -26,8 +26,9 @@ req_extensions          = ca_reqext             # Desired extensions
 0.domainComponent       = "edu"
 1.domainComponent       = "ucsd"
 2.domainComponent       = "e4e"
-organizationName        = "UCSD Engineers for Exploration"
-commonName              = "Engineers for Exploration CA"
+organizationName        = "UC San Diego"
+organizationalUnitName  = "Engineers for Exploration"
+commonName              = "UCSD Engineers for Exploration"
 
 [ ca_reqext ]
 keyUsage                = critical,keyCertSign,cRLSign
