--- a/etc/signing-ca.conf
+++ b/etc/signing-ca.conf
@@ -13,7 +13,7 @@ dir                     = .                     # Top dir
 # certificate.
 
 [ req ]
-default_bits            = 2048                  # RSA key size
+default_bits            = 4096                  # RSA key size
 encrypt_key             = yes                   # Protect private key
 default_md              = sha256                # MD to use
 utf8                    = yes                   # Input is UTF-8
@@ -44,7 +44,7 @@ default_ca              = signing_ca            # The default CA section
 
 [ signing_ca ]
 certificate             = $dir/ca/$ca.crt       # The CA cert
-private_key             = $dir/ca/$ca/private/$ca.key # CA private key
+private_key             = $dir/private/$ca.key # CA private key
 new_certs_dir           = $dir/ca/$ca           # Certificate archive
 serial                  = $dir/ca/$ca/db/$ca.crt.srl # Serial number file
 crlnumber               = $dir/ca/$ca/db/$ca.crl.srl # CRL number file
